[package]
name = "mst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
ellipse = "0.2.0"
pancurses = "0.17.0"
thiserror = "1.0.38"
