[package]
name = "puccinia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.26.0"
ellipse = "0.2.0"
itertools = "0.11.0"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
thiserror = "1.0.38"
tui = "0.19.0"
